{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 35,
  "lineage": "2894902f-c1d3-7d42-77be-e950c6656472",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "argos_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:loadbalancer/app/argos-alb/1221c2f1bb042f65",
            "arn_suffix": "app/argos-alb/1221c2f1bb042f65",
            "dns_name": "internal-argos-alb-462960224.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:loadbalancer/app/argos-alb/1221c2f1bb042f65",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "argos-alb",
            "security_groups": [
              "sg-0e1ac3c80f5427a2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e699c55e56db711"
              },
              {
                "subnet_id": "subnet-07cd2f8a830a24854"
              }
            ],
            "subnets": [
              "subnet-00e699c55e56db711",
              "subnet-07cd2f8a830a24854"
            ],
            "vpc_id": "vpc-04638d563afa770ee",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.argos_alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "service_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-analytics-tg/f061e3e724ffa042",
                        "weight": 1
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-dashboard-tg/b82fccae069fa32e",
                        "weight": 1
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-data-tg/c211fadcf0c7cd9e",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:loadbalancer/app/argos-alb/1221c2f1bb042f65",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.argos_alb",
            "aws_lb_target_group.analytics",
            "aws_lb_target_group.dashboard",
            "aws_lb_target_group.data",
            "aws_security_group.argos_alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "analytics_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-analytics-tg/f061e3e724ffa042",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener-rule/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b/e32cca505b18188e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/analytics-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener-rule/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b/e32cca505b18188e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b",
            "priority": 2
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.service_listener",
            "aws_lb_target_group.analytics"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "dashboard_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-dashboard-tg/b82fccae069fa32e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener-rule/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b/0754c10ef733e35f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener-rule/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b/0754c10ef733e35f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b",
            "priority": 3
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.service_listener",
            "aws_lb_target_group.dashboard"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "data_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-data-tg/c211fadcf0c7cd9e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener-rule/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b/ff2dcfd812f8f925",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/data-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener-rule/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b/ff2dcfd812f8f925",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:listener/app/argos-alb/1221c2f1bb042f65/5a240f6636e0248b",
            "priority": 1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.service_listener",
            "aws_lb_target_group.data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-analytics-tg/f061e3e724ffa042",
            "arn_suffix": "targetgroup/argos-analytics-tg/f061e3e724ffa042",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/analytics-service/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-analytics-tg/f061e3e724ffa042",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "argos-analytics-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04638d563afa770ee"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-dashboard-tg/b82fccae069fa32e",
            "arn_suffix": "targetgroup/argos-dashboard-tg/b82fccae069fa32e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-dashboard-tg/b82fccae069fa32e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "argos-dashboard-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04638d563afa770ee"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-data-tg/c211fadcf0c7cd9e",
            "arn_suffix": "targetgroup/argos-data-tg/c211fadcf0c7cd9e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758213233865:targetgroup/argos-data-tg/c211fadcf0c7cd9e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "argos-data-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04638d563afa770ee"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "argos_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758213233865:security-group/sg-0e1ac3c80f5427a2e",
            "description": "Security group for ARGOS",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1ac3c80f5427a2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "argos_sg",
            "name_prefix": "",
            "owner_id": "758213233865",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04638d563afa770ee"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "argos_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2070300607",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e1ac3c80f5427a2e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.argos_alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "argos_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2311311171",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e1ac3c80f5427a2e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.argos_alb_sg"
          ]
        }
      ]
    }
  ]
}